DOC-1877: copy-edits, corrections, and markup clean-up for the post-release 6.3 docs (#2595)
* DOC-1877: partials/events/inlinecss-events.adoc

Typo correction in xref:
-provided by the xref:inlince-css.adoc
+provided by the xref:inline-css.adoc

* DOC-1877: 6.3-release-notes.adoc

Typo correction: s/Spellchecker Pro/Spell Checker Pro/.

* DOC-1877: migration-from-5.x.adoc

Typo correction: s/Spellchecker Pro/Spell Checker Pro/.

* DOC-1877: migration-from-5x.adoc

Where appropriate, AsciiDoc https macros were replaced with AsciiDoc xref macros.

Also, a single typographic copy-edit replacing a tear-drop possessive apostrophe with a closing quote apostrophe.

* DOC-1877: partials/index-pages/premium-plugins.adoc

Added entries for missing Premium plugins: Advanced Typography, and Inline CSS.

* DOC-1877: partials/misc/premium-plugin-list.adoc

Added missing Premium plugins — Advanced Typography, Inline CSS, and MoxieManager — to re-used list of same.

* DOC-1877: editor-and-features.adoc

Typographical copy-edit: s/‘/’/.

* DOC-1877: editor-and-features.adoc

Replaced instances of ‘TinyMCE’ with AsciiDoc attribute, {productname}.

* DOC-1877: editor-plugin-version.adoc

Added missing Premium plugins to ‘specifying the version of the premium plugins deployed from Tiny Cloud’ table: Advanced Typography, Inlince CSS, and RTC.

Also swapped around Merge tags and Mentions rows so as to correct the out-of-alphabetical order presentation.

* DOC-1877: inline-css.adoc

Removed hanging sentence.

* DOC-1877: partials/index-pages/premium-plugins.adoc

Added empty (aka dummy) table cell markup to end of table of premium plugins.

Also added comments documenting when this empty cell mark-up should be either commented out or set to render, so as to ensure all table cells above render.

* DOC-1877: partials/index-pages/opensource-plugins.adoc

Added comments documenting when the empty cell mark-up should be either commented ou

--- a/modules/ROOT/pages/editor-and-features.adoc
+++ b/modules/ROOT/pages/editor-and-features.adoc
@@ -1,6 +1,6 @@
 = Cloud deployment of editor & plugins
-:description_short: Learn how to set up the TinyMCE editor via the Cloud or migrate from a self-hosted environment.
-:description: Learn how to set up the TinyMCE editor via the Cloud or migrate from a self-hosted environment.
+:description_short: Learn how to set up the {productname} editor via the Cloud or migrate from a self-hosted environment.
+:description: Learn how to set up the {productname} editor via the Cloud or migrate from a self-hosted environment.
 :keywords: tinymce, cloud, script, textarea, apiKey
 :productSource: cloud
 
@@ -10,7 +10,7 @@
 
 All {cloudname} accounts include a free, pre-configured {cloudname} image proxy service. This setup uses the xref:editimage.adoc[Enhanced Image Editing] plugin.
 
-== Integrating TinyMCE for the first time
+== Integrating {productname} for the first time
 
 === Step 1: Insert the Tiny Cloud script tag into the webpage
 
@@ -39,13 +39,13 @@ image::scripttag.png[Script Tag Description]
 To check the *Referer* header, open your browser's _Developer's Tools_ and open the _Network_ tab. From there, find the request being made to load {productname} with your API key, and click on the *Headers* tab. In the section called *Request Headers* there should be a field for *Referer*. If the value there is different from one of your registered URLs, you may need to adjust either your registered URLs, or your application's *Refer* header settings.
 ====
 
-=== Step 2: Load, customize and interact with TinyMCE
+=== Step 2: Load, customize and interact with {productname}
 
 There are more than 40 open source plugins that enhance the editing experience in addition to the advanced content create solutions on {cloudname}. A range of xref:basic-example.adoc[simple examples] are available. Refer to the xref:cloud-quick-start.adoc[Quick start] section for more information.
 
-=== Step 3: Specifying purchased TinyMCE plugins and toolbar/menu items
+=== Step 3: Specifying purchased {productname} plugins and toolbar/menu items
 
-NOTE: It may take up to 30 minutes for the purchased plugin to be available to {productname}. Clear the browser's cache.
+NOTE: It may take up to 30 minutes for the purchased plugin to be available to {productname}. Clear the browser’s cache.
 
 Extend the xref:basic-setup.adoc[{productname} configuration] to include any additional purchased plugins and associated toolbar and menu items. Refer to the following enablement guides for more information:
 
@@ -92,7 +92,7 @@ Reference xref:editor-important-options.adoc#external_plugins[external_plugins] 
 
 WARNING: Do not use the regular xref:work-with-plugins.adoc[plugins] configuration element.
 
-=== Step 3: Specify purchased TinyMCE plugins and toolbar buttons
+=== Step 3: Specify purchased {productname} plugins and toolbar buttons
 
 Extend the xref:basic-setup.adoc[{productname} configuration] to include any additional purchased plugins and associated toolbar and menu items. Refer to the following enablement guides for more information:
 
