DOC-1859: premium-plugins.adoc & opensource-plugins.adoc
Edited several short descriptions from third-person singular simple present to simple present, for consistency’s sake.

Also removed an instance of second person referencing.

--- a/modules/ROOT/partials/index-pages/opensource-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/opensource-plugins.adoc
@@ -103,7 +103,7 @@ a|
 [.lead]
 xref:lists.adoc[Lists]
 
-Normalizes list behavior between browsers.
+Normalize list behavior between browsers.
 
 a|
 [.lead]
@@ -127,7 +127,7 @@ a|
 [.lead]
 xref:preview.adoc[Preview]
 
-Shows a dialog of the current content in read-only format.
+Show a dialog of the current content in read-only format.
 
 a|
 [.lead]
@@ -139,7 +139,7 @@ a|
 [.lead]
 xref:save.adoc[Save]
 
-Adds a save button to the {productname} toolbar.
+Add a save button to the {productname} toolbar.
 
 a|
 [.lead]
@@ -157,19 +157,19 @@ a|
 [.lead]
 xref:template.adoc[Template]
 
-Custom templates for your content.
+Custom templates for content.
 
 a|
 [.lead]
 xref:visualblocks.adoc[Visual Blocks]
 
-Allows a user to see block level elements such as paragraphs.
+Allow a user to see block level elements such as paragraphs.
 
 a|
 [.lead]
 xref:visualchars.adoc[Visual Characters]
 
-See invisible characters like non-breaking spaces.
+See invisible characters such as non-breaking spaces.
 
 a|
 [.lead]
