--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -73,7 +73,7 @@ a|
 [.lead]
 xref:formatpainter.adoc[Format Painter]
 
-Quickly apply formats to multiple pieces of text.
+Apply formats to multiple pieces of text.
 
 a|
 [.lead]
@@ -85,19 +85,19 @@ a|
 [.lead]
 xref:linkchecker.adoc[Link Checker]
 
-Validate links, as you type.
+Validate links, as they are typed.
 
 a|
 [.lead]
 xref:mentions.adoc[Mentions]
 
-Enables @mention functionality.
+Enable @mention functionality.
 
 a|
 [.lead]
 xref:mergetags.adoc[Merge Tags]
 
-Enables adding Merge Tags to content.
+Enable adding Merge Tags to content.
 
 a|
 [.lead]
@@ -109,7 +109,7 @@ a|
 [.lead]
 xref:pageembed.adoc[Page Embed]
 
-Easily inserts iframe into the content.
+Insert iframe into the content.
 
 a|
 [.lead]
