DOC-1859: multiple files
Affected files

01.  mediaembed_service_url.adoc
02. linkchecker_service_url.adoc
03. linkchecker_content_css.adoc
04. image_proxy_service_url.adoc
05. image_cors_hosts.adoc
06. editimage_credentials_hosts.adoc
07. linkchecker.adoc
08. export.adoc
09. editimage.adoc
10. configure-required-services.adoc

Edits:

1: s/mydomain.com/example.com
2: s/otherdomain.com/example.net

--- a/modules/ROOT/pages/configure-required-services.adoc
+++ b/modules/ROOT/pages/configure-required-services.adoc
@@ -88,7 +88,7 @@ ephox {
 
 The `+*+` wildcard character matches any value. Wildcards are supported in the following parts of entries in the `+allowed-origin+` list:
 
-. As a prefix of the domain (e.g. `+*.mydomain.com+`).
+. As a prefix of the domain (e.g. `+*.example.com+`).
 . As the only character (e.g. `+*+`). This will allow *any* Origin to access the server-side components.
 
 NOTE: Option 2 allows a broad set of origins access to the server-side components and is NOT recommended for production deployments.
