--- a/modules/ROOT/partials/configuration/editimage_credentials_hosts.adoc
+++ b/modules/ROOT/partials/configuration/editimage_credentials_hosts.adoc
@@ -13,7 +13,7 @@ tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   toolbar: 'image',
   plugins: 'image editimage',
-  editimage_cors_hosts: [ 'mydomain.com', 'otherdomain.com' ],
-  editimage_credentials_hosts: [ 'mydomain.com', 'otherdomain.com' ]
+  editimage_cors_hosts: [ 'example.com', 'example.net' ],
+  editimage_credentials_hosts: [ 'example.com', 'example.net' ]
 });
 ----
