--- a/modules/ROOT/partials/configuration/linkchecker_service_url.adoc
+++ b/modules/ROOT/partials/configuration/linkchecker_service_url.adoc
@@ -12,6 +12,6 @@ A URL of the server-side link validation service. This is a required option, wit
 tinymce.init({
   selector: 'textarea', // change this value according to your HTML
   plugins: 'linkchecker',
-  linkchecker_service_url: 'http://mydomain.com/linkchecker'
+  linkchecker_service_url: 'http://example.com/linkchecker'
 });
 ----
