DOC-1903: advtable.adoc
Typo correction: s/Row/row/.

--- a/modules/ROOT/pages/advtable.adoc
+++ b/modules/ROOT/pages/advtable.adoc
@@ -100,7 +100,7 @@ tinymce.init({
 });
 ----
 
-With this custom generator, when a table with a header and footer row already set has Row numbers added via the `advtablerownumbering` toolbar item, row numbers are not added to the header and footer rows.
+With this custom generator, when a table with a header and footer row already set has row numbers added via the `advtablerownumbering` toolbar item, row numbers are not added to the header and footer rows.
 
 image::advtable-row-numbered-table-with-un-numbered-header-and-footer-rows.png[Row-numbered table with un-numbered header and footer rows]
 
