DOC-1860: 6.4-release-notes.adoc &c
1. Added 6.4-release-notes.adoc with outline.
2. edited nav.adoc to include 6.4 release notes navigation.
3. edited .api-version: s/6.3.1/6.4/.
4. added changelog entry for this ticket to unreleased section of changelog.md.

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -391,6 +391,17 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.4
+**** xref:6.4-release-notes.adoc#overview[Overview]
+**** xref:6.4-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:6.4-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:6.4-release-notes.adoc#improvement[Improvement]
+**** xref:6.4-release-notes.adoc#additions[Additions]
+**** xref:6.4-release-notes.adoc#changes[Changes]
+**** xref:6.4-release-notes.adoc#bug-fixes[Bug fixes]
+//**** xref:6.4-release-notes.adoc#security-fixes[Security fixes]
+//**** xref:6.4-release-notes.adoc#known-issues[Known issues]
+// Reveal or remove the above lines as appropriate.
 *** TinyMCE 6.3
 **** xref:6.3-release-notes.adoc#overview[Overview]
 **** xref:6.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
